fix(frontend): made the website *somewhat* responsive on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,71 +1,44 @@
 #root {
   max-width: 40%;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   text-align: center;
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
+  height: 4em;
+  padding: 1em;
   will-change: filter;
   transition: filter 300ms;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
 
 .card {
-  padding: 2em;
+  padding: 1em;
 }
 
-.read-the-docs {
-  color: #888;
-}
-
-
-/* pretty button */
 .main-button {
-  font-size: 1.5em;
+  font-size: 1.2em;
   font-weight: 900;
   padding: 0.5em 1em;
   border: 0px;
   border-radius: 1em 0 1em 0;
-  background: linear-gradient(90deg, #555DB6 0%, #9987F4 100%);
+  background: linear-gradient(90deg, #555db6 0%, #9987f4 100%);
   width: 100%;
   height: 2.3em;
   vertical-align: middle;
 }
 
-.main-button:hover {
-  background: linear-gradient(90deg, rgb(177, 163, 245) 0%, #8f7ee2 100%);
-  color: white;
-  cursor: pointer;
+@media (max-width: 768px) {
+  #root {
+    max-width: 100%;
+    padding: 0.5rem;
+  }
+
+  .card {
+    padding: 0.5em;
+  }
+
+  .main-button {
+    font-size: 1em;
+  }
 }
-
-.main-button:disabled {
-  background: #929292;
-  color: #ccc;
-  cursor: not-allowed;
-}
-
-
-
