--- a/frontend/src/components/header/Header.css
+++ b/frontend/src/components/header/Header.css
@@ -1,12 +1,12 @@
 header {
   display: inline-block;
-  font-size: 1.4em;
-  margin-top: 5vh;
+  font-size: 1.3em;
+  margin-top: 3vh;
 }
 
 .header-text {
   margin: 0;
-  line-height: 1.3;
+  line-height: 1.1;
 }
 
 .header-text-basic {
@@ -28,4 +28,11 @@ header {
 
 .align-right {
   text-align: right;
+}
+
+@media (max-width: 768px) {
+  header {
+    font-size: 1em;
+    margin-top: 2vh;
+  }
 }
