--- a/frontend/src/components/infobox/InfoBox.css
+++ b/frontend/src/components/infobox/InfoBox.css
@@ -2,18 +2,18 @@
   margin: 1vw;
   position: relative;
   background-color: #464b73;
-  border-radius: 30px;
-  padding: 0.1vw 5vw;
+  border-radius: 20px;
+  padding: 0.1vw 3vw;
   color: white;
-  font-size: 0.8em;
+  font-size: 0.7em;
 }
 
 .exclamation {
-  font-size: 20em;
+  font-size: 15em;
   position: absolute;
   font-family: "Tac One", serif;
   font-weight: 800;
-  left: -30px;
+  left: -20px;
   top: 50%;
   line-height: 0em;
   color: #a397ec;
@@ -25,12 +25,12 @@
   top: 0;
   font-family: "Tac One", serif;
   border: 0px;
-  border-radius: 20px;
-  font-size: 1.5em;
+  border-radius: 15px;
+  font-size: 1.2em;
   line-height: 0em;
-  width: 1.7em;
-  height: 1.7em;
-  margin: 0.5em;
+  width: 1.5em;
+  height: 1.5em;
+  margin: 0.3em;
   padding: 0.1em;
   cursor: pointer;
   color: white;
@@ -39,21 +39,47 @@
 .highlighted-text {
   font-weight: 800;
   text-decoration: underline;
-  /* color: #c5a0f5; */
   color: #afa4f7;
   cursor: pointer;
 }
 
 .info-box-big-text {
-  font-size: 1.3em;
-  margin: 0.5vw;
+  font-size: 2em;
+  margin: 0.3vw;
 }
 
 .info-box-medium-text {
-  font-size: 1.1em;
+  font-size: 0.9em;
   margin: 0.1vw;
 }
 
 ul {
   text-align: left;
+}
+
+@media (max-width: 768px) {
+  .info-box-container {
+    padding: 0.1vw 3.2vw;
+    font-size: 0.6em;
+  }
+
+  .exclamation {
+    font-size: 12em;
+    left: -10px;
+  }
+
+  .close-button {
+    font-size: 1em;
+    width: 1.7em;
+    height: 1.7em;
+    margin: 1em;
+  }
+
+  .info-box-big-text {
+    font-size: 1.5em;
+  }
+
+  .info-box-medium-text {
+    font-size: 0.8em;
+  }
 }
